--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
 body {
-  background pink;
+  background-color:  pink;
 }
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  
 }
 
 h2 {
   color: green;
-  font-weight: normal
+  font-weight: normal;
   font-style: italic;
 }
 
@@ -17,7 +17,10 @@ h2 {
   font-family: 12px;
 }
 
+/* #tasks .completed {
+  background-color: #ccc;
+  text-decoration: underline;
+} */
 #tasks .completed {
-  backgound: #ccc;
   text-decoration: underline;
 }
